# CloveceNehnevajSaPOS

./: makefile
Client/: CMakeLists.txt  ClientGame.cpp  ClientGame.h  ClientMain.cpp  MySocket.cpp  MySocket.h
Common/: CMakeLists.txt
Server/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Player.h  ServerConnection.cpp  ServerConnection.h  ServerGame.cpp  ServerGame.h  ServerMain.cpp  Square.cpp  Square.h  active_socket.c  active_socket.h  passive_socket.c  passive_socket.h
Solution/: CMakeLists.txt
